# rust-text

./: .env.example  API_TEMPLATE.md  Cargo.toml  GAME_BOT_TEMPLATE.md  SCRIPT_LOGIC_GUIDE.md
examples/: flow_demo.rs  sanguo_daily.rs
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  user_api.rs
src/gamebot/: action.rs  bot.rs  capture.rs  detector.rs  error.rs  flow.rs  flow_sanguo.rs  mod.rs  runner.rs  template.rs  window.rs
